fix overflow html

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,7 @@ html {
   background-image: url('../assets/bg.jpg');
   position: relative;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 html::before {
